@@ -1,3 +1,10 @@
+2015-05-14 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* src/SDCC.y:
+	  simplify nested '&' and '*' in AST.
+	* support/regression/tests/bug-2381.c:
+	  Add a new test case.
+
 2015-05-13 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* src/SDCCerr.c:
